--- a/src/scripts/ci/travis.yml
+++ b/src/scripts/ci/travis.yml
@@ -9,179 +9,11 @@ jobs:
   include:
     - os: linux
       dist: focal
-      name: Linux/GCC
-      compiler: gcc
-      env:
-       - TARGET="shared"
-
-    - os: linux
-      dist: focal
-      name: Linux/Clang
-      compiler: clang
-      env:
-       - TARGET="shared"
-
-    - os: linux
-      dist: xenial
       name: Coverage
+      arch: arm64
       compiler: gcc
       env:
        - TARGET="coverage"
-
-    - os: linux
-      dist: focal
-      arch: arm64
-      name: Fuzzers
-      compiler: gcc
-      env:
-       - TARGET="fuzzers"
-
-    - os: linux
-      dist: focal
-      name: Valgrind
-      compiler: gcc
-      env:
-       - TARGET="valgrind"
-
-    - os: linux
-      dist: focal
-      name: Linux s390x
-      arch: s390x
-      compiler: gcc
-      env:
-       - TARGET="shared"
-
-    - os: linux
-      dist: focal
-      name: Linux arm64
-      arch: arm64
-      compiler: gcc
-      env:
-       - TARGET="shared"
-
-    - os: linux
-      dist: focal
-      name: Linux ppc64le
-      arch: ppc64le
-      compiler: gcc
-      env:
-       - TARGET="shared"
-
-    - os: linux
-      dist: focal
-      name: Linux i386 cross
-      compiler: gcc
-      env:
-       - TARGET="cross-i386"
-
-    - os: linux
-      dist: xenial
-      name: Linux ppc32 cross
-      compiler: gcc
-      env:
-       - TARGET="cross-ppc32"
-
-    - os: linux
-      dist: focal
-      arch: arm64
-      name: Linux arm32 cross
-      compiler: gcc
-      env:
-       - TARGET="cross-arm32"
-
-    - os: linux
-      dist: focal
-      name: Android arm32 cross
-      compiler: clang
-      env:
-       - TARGET="cross-android-arm32"
-       - ANDROID_NDK=android-ndk-r21d
-
-    - os: linux
-      dist: focal
-      name: Android arm64 cross
-      compiler: clang
-      env:
-       - TARGET="cross-android-arm64"
-       - ANDROID_NDK=android-ndk-r21d
-
-    - os: linux
-      dist: focal
-      name: MinGW x86-64 cross
-      compiler: gcc
-      env:
-       - TARGET="cross-win64"
-
-    - os: osx
-      name: macOS
-      compiler: clang
-      env:
-       - TARGET="shared"
-
-    - os: osx
-      name: iOS
-      compiler: clang
-      env:
-       - TARGET="cross-arm64"
-
-    - os: linux
-      dist: bionic
-      name: Linux GCC 4.8
-      compiler: gcc
-      env:
-       - TARGET="gcc4.8"
-       - EXTRA_FLAGS="--disable-werror"
-
-    - os: linux
-      dist: focal
-      name: Linux Clang 8
-      compiler: clang
-      env:
-       - TARGET="clang8"
-       - CXX="/usr/bin/clang++-8"
-
-    - os: linux
-      dist: focal
-      name: Minimized
-      compiler: gcc
-      env:
-       - TARGET="mini-shared"
-
-    - os: linux
-      dist: focal
-      arch: arm64
-      name: Baremetal
-      compiler: gcc
-      env:
-       - TARGET="baremetal"
-
-    - os: linux
-      dist: focal
-      name: BSI policy
-      compiler: gcc
-      env:
-       - TARGET="bsi"
-
-    - os: linux
-      dist: focal
-      name: NIST policy
-      compiler: gcc
-      env:
-       - TARGET="nist"
-
-    - os: linux
-      dist: focal
-      name: Pylint
-      compiler: gcc
-      env:
-       - TARGET="lint"
-
-    - os: linux
-      dist: focal
-      name: Documentation
-      compiler: gcc
-      env:
-       - TARGET="docs"
 
 install:
   - ./src/scripts/ci/setup_travis.sh
@@ -195,6 +27,7 @@ branches:
     - master
     - release-2
     - coverity_scan
+    - jack/fix-focal
 
 git:
   depth: 10
